# PTOAS

./: CMakeLists.txt  README.md  sycn.txt
.codex/: CLAUDE.md
.github/scripts/: notify_gitcode_ci_failures.py  sync_merged_prs_to_gitcode.py
.github/workflows/: build_wheel.yml  ci.yml  notify_gitcode_ci_failures.yml  sync_merged_prs_to_gitcode.yml
Movfp/: movfp-pto-ir.pto  movfp-pto.cpp
docker/: Dockerfile  README.md  collect_ptoas_dist.sh  copy_ptoas_deps.sh
docs/: PTO_IR_manual.md  no_npu_compile_only_guide_zh.md  vpto-spec.md
docs/isa/: 16-cube-matmul.md
include/PTO/IR/: PTO.h  PTOAttrs.td  PTOInterfaces.td  PTOOps.td  PTOTypeDefs.td  VPTOOps.td
include/PTO/Transforms/: BlockSyncAnalysis.h  MemoryDependentAnalyzer.h  MoveSyncState.h  PTOIRTranslator.h  Passes.h  Passes.td  RemoveRedundantSync.h  SyncCodegen.h  SyncEventIdAllocation.h
include/pto/: CMakeLists.txt
include/pto-c/Dialect/: PTO.h
include/pto/IR/: CMakeLists.txt  PTO.h  PTOAttrs.td  PTODialect.h  PTOInterfaces.td  PTOOps.td  PTOTypeDefs.td
include/pto/Transforms/: BlockSyncAnalysis.h  CMakeLists.txt  MemoryDependentAnalyzer.h  MoveSyncState.h  PTOIRTranslator.h  Passes.h  Passes.td  RemoveRedundantSync.h  SyncCodegen.h  SyncCommon.h  SyncEventIdAllocation.h
lib/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/basic/: tpush_tpop_emitc.pto  tpush_tpop_frontend_lowering_a5.pto  trsqrt_emitc.pto
test/cutile-samples/: readme.txt
test/samples/: runop.sh  sitecustomize.py
tools/: CMakeLists.txt
tools/ptoas/: CMakeLists.txt  ptoas.cpp
(+253 files in other folders)
